<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rr_state_mgm_srv</name>
  <version>0.0.0</version>
  <description>keeps current state of sensors, and actions, acts as a buffer for long running service</description>
  <maintainer email="azzmosphere@gmail.com">Aaron Spiteri</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  

  <depend>rr_common_base</depend>
  <depend>rr_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>uuid-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
